Fix alignment of things on project page.

--- a/www/themes/borg/css/layout.css
+++ b/www/themes/borg/css/layout.css
@@ -188,4 +188,5 @@ body.node-type-project-module .layout--double-fixed-inner-rev .l-content,
 body.node-type-project-layout .layout--double-fixed-inner-rev .l-content {
   max-width: 960px;
   margin: 0 auto;
+  text-align: left;
 }
